# DeepC

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  THIRD_PARTY_LICENSES.md  batchInstall.sh  docker-build.sh
.gsd/: DECISIONS.md  KNOWLEDGE.md  OVERRIDES.md  PROJECT.md  REQUIREMENTS.md  STATE.md  completed-units.json  doctor-history.jsonl  event-log.jsonl  gsd.db-shm  gsd.db-wal  state-manifest.json
.gsd/activity/: 001-complete-milestone-M006.jsonl
.gsd/forensics/: report-2026-03-23-12-15-10.md
.gsd/journal/: 2026-03-23.jsonl  2026-03-24.jsonl  2026-03-25.jsonl
.gsd/milestones/M001/: M001-ROADMAP.md  M001-SUMMARY.md  M001-VALIDATION.md
.gsd/milestones/M002/: M002-CONTEXT.md  M002-SUMMARY.md  M002-VALIDATION.md
.gsd/milestones/M003/: M003-CONTEXT.md  M003-ROADMAP.md  M003-SUMMARY.md  M003-VALIDATION.md
.gsd/milestones/M004-ks4br0/: M004-ks4br0-CONTEXT.md  M004-ks4br0-ROADMAP.md  M004-ks4br0-SUMMARY.md  M004-ks4br0-VALIDATION.md
.gsd/milestones/M005-9j5er8/: M005-9j5er8-CONTEXT.md  M005-9j5er8-ROADMAP.md  M005-9j5er8-SUMMARY.md  M005-9j5er8-VALIDATION.md
.gsd/milestones/M006/: M006-CONTEXT.md  M006-ROADMAP.md  M006-SUMMARY.md  M006-VALIDATION.md
.gsd/milestones/M007-gvtoom/: M007-gvtoom-CONTEXT.md  M007-gvtoom-ROADMAP.md  M007-gvtoom-SUMMARY.md  M007-gvtoom-VALIDATION.md
.gsd/milestones/M008-y32v8w/: M008-y32v8w-CONTEXT.md  M008-y32v8w-ROADMAP.md  M008-y32v8w-SUMMARY.md  M008-y32v8w-VALIDATION.md
.gsd/milestones/M009-mso5fb/: M009-mso5fb-CONTEXT.md  M009-mso5fb-META.json  M009-mso5fb-RESEARCH.md  M009-mso5fb-ROADMAP.md  M009-mso5fb-SUMMARY.md  M009-mso5fb-VALIDATION.md
.gsd/milestones/M010-zkt9ww/: M010-zkt9ww-CONTEXT.md  M010-zkt9ww-ROADMAP.md  M010-zkt9ww-SUMMARY.md  M010-zkt9ww-VALIDATION.md
.gsd/milestones/M011-qa62vv/: M011-qa62vv-CONTEXT.md  M011-qa62vv-ROADMAP.md  M011-qa62vv-SUMMARY.md  M011-qa62vv-VALIDATION.md
.gsd/milestones/M012-kho2ui/: M012-kho2ui-CONTEXT.md  M012-kho2ui-ROADMAP.md  M012-kho2ui-SUMMARY.md  M012-kho2ui-VALIDATION.md
.gsd/quick/1-add-toggle-to-disable-gpu-pathway-and-fo/: 1-SUMMARY.md
.gsd/quick/10-deepcdefocusporay-just-hangs-pegs-one-cp/: 10-SUMMARY.md
.gsd/quick/11-deepcdefocusray-still-hanging-what-if-we/: 11-SUMMARY.md
.gsd/quick/2-getting-this-error-compiling-50-building/: 2-SUMMARY.md
.gsd/runtime/: quick-return.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  STATE.md.bak-2026-03-17T06-06-27  config.json
.planning/codebase/: CONCERNS.md  CONVENTIONS.md  STRUCTURE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md
DeepCBlur/: CMakeLists.txt
DeepCBlur/include/: BlurKernels.hpp  BlurStrategy.hpp  DeepCBlurSpec.hpp  OpTreeFactory.hpp  SeperableBlurOp.hpp  XBlurOp.hpp  YBlurOp.hpp  ZBlurOp.hpp
DeepCBlur/src/: BlurKernels.cpp  BlurStrategy.cpp  DeepCBlur.cpp  DeepCBlurSpec.cpp
DeepCDefocus/: CMakeLists.txt
DeepCDefocus/include/: CMGDeepDefocusSpec.hpp  CircleMetadataKernel.hpp  DOFKernel.hpp  DeepCDefocusSpec.hpp  DefocusKernels.hpp
DeepCDefocus/src/: CircleMetadataKernel.cpp  DOFKernel.cpp  DeepCDefocus.cpp  DeepCDefocusSpec.cpp  DeepDefocus.cpp  DefocusKernels.cpp
FastNoise/: FastNoise.cpp
cmake/: FindNuke.cmake
crates/opendefocus/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
crates/opendefocus-datastructure/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/opendefocus-deep/: Cargo.toml
crates/opendefocus-kernel/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
crates/opendefocus-shared/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
examples/: .gitignore
python/: init.py  menu.py  menu.py.in
recover-branch/: .gitignore  CMakeLists.txt  batchInstall.sh  docker-build.sh
recover-branch/.gsd/: DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  gsd.db-shm
recover-branch/.planning/: MILESTONES.md  PROJECT.md  STATE.md  config.json
recover-branch/FastNoise/: FastNoise.h
recover-branch/cmake/: FindNuke.cmake
recover-branch/docker/: windows.Dockerfile
recover-branch/examples/: .gitignore
recover-branch/python/: menu.py.in
recover-branch/src/: CMakeLists.txt  DeepCAdd.cpp  DeepCAdjustBBox.cpp  DeepCBlur.cpp  DeepCClamp.cpp  DeepCConstant.cpp  DeepCCopyBBox.cpp  DeepCHueShift.cpp  DeepCMWrapper.h  DeepCMatrix.cpp  DeepCMultiply.cpp  DeepCPNoise.cpp  DeepCWrapper.cpp  DeepCWrapper.h  DeepSampleOptimizer.h  ShuffleMatrixKnob.cpp  ShuffleMatrixKnob.h  ShuffleMatrixWidget.cpp  ShuffleMatrixWidget.h
scripts/: verify-s01-syntax.sh
share/cmake/: FindNuke.cmake  TestForDDImageVersion.cxx
shared/include/: DeepCDebugging.hpp  DeepCOp.hpp  DeepCOpTree.hpp  DeepCSpec.hpp
shared/src/: DeepCOp.cpp  DeepCOpTree.cpp  DeepCSpec.cpp
src/: CMakeLists.txt  C_DeepWorldPosition.cpp  DeepCAdd.cpp  DeepCAddChannels.cpp  DeepCAdjustBBox.cpp  DeepCBlink.cpp  DeepCBlur.cpp  DeepCBlur2.cpp  DeepCClamp.cpp  DeepCColorLookup.cpp  DeepCConstant.cpp  DeepCCopyBBox.cpp  DeepCCopyBbox.cpp  DeepCDefocusPO.cpp  DeepCDefocusPORay.cpp  DeepCDefocusPOThin.cpp  DeepCDepthBlur.cpp  DeepCGW.cpp  DeepCGamma.cpp  DeepCGrade.cpp  DeepCHueShift.cpp  DeepCID.cpp  DeepCInvert.cpp  DeepCKeyMix.cpp  DeepCKeymix.cpp  DeepCMWrapper.cpp  DeepCMWrapper.h  DeepCMatrix.cpp  DeepCMultiply.cpp  DeepCOpenDefocus.cpp  DeepCPMatte.cpp  DeepCPMatteGrade.cpp  DeepCPNoise.cpp  DeepCPNoiseGrade.cpp  DeepCPosterize.cpp  DeepCRemoveChannels.cpp  DeepCSaturation.cpp  DeepCShuffle.cpp  DeepCShuffle2.cpp  DeepCTest.cpp  (+12 more)
test/: test.exr  test_deepcdefocus_po.nk  test_deepcdefocus_po.nk.autosave  test_opendefocus.nk  test_opendefocus_256.nk  test_opendefocus_bokeh.nk  test_opendefocus_camera.nk  test_opendefocus_cpu.nk  test_opendefocus_empty.nk  test_opendefocus_holdout.nk  test_opendefocus_multidepth.nk  test_ray.nk  test_ray.nk.autosave  test_thin.exr  test_thin.nk
test/output/: .gitignore
(+436 files in other folders)
